--- a/css/styles.css
+++ b/css/styles.css
@@ -464,6 +464,7 @@ img {
 }
 .footer-form {
   display: flex;
+  align-items: center;
 }
 .footer-form-label {
 }
@@ -532,6 +533,10 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
+  padding-top: 72px;
+  padding-bottom: 24px;
+  padding-right: 24px;
+  padding-left: 24px;
   width: 408px;
   min-height: 584px;
 
@@ -578,24 +583,20 @@ img {
 }
 .modal-title {
   display: block;
-  margin-top: 72px;
   margin-bottom: 16px;
 
   color: #2e2f42;
   text-align: center;
 }
 .modal-form {
-  margin-left: 24px;
-  margin-right: 24px;
-  margin-bottom: 16px;
 }
-.modal-form-label {
+.modal-form-field {
   display: block;
 }
-.modal-form-label + .modal-form-label {
+.modal-form-field + .modal-form-field {
   margin-top: 8px;
 }
-.modal-form-label-text {
+.modal-form-label {
   display: block;
   margin-bottom: 4px;
 
@@ -604,7 +605,7 @@ img {
   letter-spacing: 0.01em;
   color: #8e8f99;
 }
-.modal-form-field {
+.modal-form-field-wrapper {
   position: relative;
 }
 .modal-form-input {
@@ -627,7 +628,10 @@ img {
   top: 50%;
   left: 16px;
   transform: translateY(-50%);
+
+  fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: none;
 }
 .modal-form-input:focus,
 .modal-form-textarea:focus {
