--- a/css/styles.css
+++ b/css/styles.css
@@ -590,13 +590,13 @@ img {
 }
 .modal-form {
 }
-.modal-form-field {
+.modal-form-label {
   display: block;
 }
-.modal-form-field + .modal-form-field {
+.modal-form-label + .modal-form-label {
   margin-top: 8px;
 }
-.modal-form-label {
+.modal-form-label-text {
   display: block;
   margin-bottom: 4px;
 
@@ -605,7 +605,8 @@ img {
   letter-spacing: 0.01em;
   color: #8e8f99;
 }
-.modal-form-field-wrapper {
+.modal-form-field {
+  display: block;
   position: relative;
 }
 .modal-form-input {
@@ -631,7 +632,6 @@ img {
 
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  pointer-events: none;
 }
 .modal-form-input:focus,
 .modal-form-textarea:focus {
